--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ############################# Default configuration ########################
-baseURL = "https://examplesite.org"
+baseURL = "https://twotone-fcafb.web.app/"
 title = "Agico | App Landing Hugo Template"
 theme = "agico-hugo"
 # post pagination
