--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -21,37 +21,37 @@ feature:
   title: Our Services
   feature_item:
   - title: Office & Communications Software
-    icon: fa-briefcase
+    icon: "fa-briefcase"
     icon_color: ''
     content: ''
     name: ''
     image: ''
   - title: Business Presence & Professional Media
-    icon: fa-building
+    icon: "fa-building"
     icon_color: ''
     content: ''
     name: ''
     image: ''
   - title: Website & Domain Services
-    icon: fa-globe
+    icon: "fa-globe"
     icon_color: ''
     content: ''
     name: ''
     image: ''
   - title: Smart Home & AV Setup
-    icon: fa-home
+    icon: "fa-home"
     icon_color: ''
     content: ''
     name: ''
     image: ''
   - title: Network & Data Services
-    icon: fa-wifi
+    icon: "fa-wifi"
     icon_color: ''
     content: ''
     name: ''
     image: ''
   - title: Computer & Device Support
-    icon: fa-desktop
+    icon: "fa-desktop"
     icon_color: ''
     content: ''
     name: ''
